--- a/learnAlphabets.html
+++ b/learnAlphabets.html
@@ -66,9 +66,9 @@
     }
 
     let index = 0;
-    const images = ['assets/A.jpg', 'assets/B.jpg', 'assets/C.jpg', 'assets/D.jpg', 'assets/E.jpg'];
-    const letters = ['A', 'B', 'C', 'D', 'E'];
-    const descriptions = ['A for Apple', 'B for Banana', 'C for Car', 'D for Dog', 'E for Elephant'];
+    const images = ['assets/A.jpg', 'assets/B.jpg', 'assets/C.jpg', 'assets/D.jpg', 'assets/E.jpg', 'assets/Fish.jpg', 'assets/grapes.jpg', 'assets/house.jpg', 'assets/icecream.jpg', 'assets/joker.jpg', 'assets/kite.jpg', 'assets/lion.jpg', 'assets/monkey.jpg', 'assets/nest.jpg', 'assets/orange.jpg', 'assets/peacock.jpg', 'assets/queen.jpg', 'assets/rose.jpg', 'assets/ship.jpg', 'assets/tiger.jpg', 'assets/umbrella.jpg', 'assets/vase.jpg', 'assets/watch.jpg', 'assets/xylophone.jpg', 'assets/yak.jpg', 'assets/zebra.jpg'];
+    const letters = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z'];
+    const descriptions = ['A for Apple', 'B for Banana', 'C for Car', 'D for Dog', 'E for Elephant', 'F for Fish', 'G for Grapes', 'H for House', 'I for Icecream', 'J for Joker', 'K for Kite', 'L for Lion', 'M for Monkey', 'N for Nest', 'O for Orange', 'P for Peacock', 'Q for Queen', 'R for Rose', 'S for Ship', 'T for Tiger', 'U for Umbrella', 'V for Vase', 'W for Watch', 'X for Xylophone', 'Y for Yak', 'Z for Zebra'];
 
     function next() {
         index = (index + 1) % images.length;
